# OsmGraphCreator

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  README_DE.md
cmake/: FindGeographicLib.cmake  FindRagel.cmake
creator/: CMakeLists.txt  GraphWriter.cpp  GraphWriter.h  MaxSpeedParser.h  MaxSpeedParser.rl  Processors.h  RamGraph.cpp  RamGraph.h  WeightCalculator.cpp  WeightCalculator.h  conversion.h  main.cpp  types.h
data/configs/: README  all.cfg  bike.cfg  car.cfg  pedestrian.cfg
data/sources/: leinfelden.pbf
docker/ubuntu/20.04/: Dockerfile
docker/ubuntu/21.04/: Dockerfile
graphs/: RamGraph.cpp  RamGraph.h
readers/: BestReader.h  CMakeLists.txt  fmibinary_maxspeedreader.cpp  fmibinary_maxspeedreader.h  fmibinaryreader.cpp  fmibinaryreader.h  fmibinaryreader_example.cpp  fmitextreader.cpp  fmitextreader.h  fmitextreader_example.cpp
tools/: plot_textgraph.py
